# gcm-sst

./: Cargo.toml  README.md
src/: gcm.rs  lib.rs  tests.rs
src/testdata/: aes_gcm_128_sst.json
